# cmake_template

./: CMakeLists.txt  main.cpp
include/lib1/: lib1.h
include/lib2/: lib2.h
include/test/: test.h
lib1/: CMakeLists.txt  lib1.cpp
lib2/: CMakeLists.txt  lib2.cpp
test/: CMakeLists.txt  test.cpp
